--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -5,7 +5,7 @@ template(name='nav')
         //     i.bars.large.grey.icon
         if connected
             a.icon.item.zoomer(href='/' class="{{isActivePath '/'}}")
-                i.big.yin.yang.grey.icon
+                i.big.yin.yang.icon
         unless connected
             .item
                 i.yin.yang.loading.big.icon
