--- a/parts/client/blocks.jade
+++ b/parts/client/blocks.jade
@@ -97,7 +97,7 @@ template(name='sbt')
                 
 template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
-    .ui.zoomer.compact.icon.button.set_session_v(class=calculated_class title=t)
+    .ui.zoomer.compact.icon.tertiary.button.set_session_v(class=calculated_class title=t)
         // if i
         if selected 
             +i n=i cl='ui mini image'
