--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -24,6 +24,7 @@ template(name='dao')
                 //     |emotion
                 // .spacer
             .four.wide.right.aligned.column
+                .ui.large.basic.label(title='results') #{doc_count} results
                 // .ui.basic.circular.button(title='when')
                 // i.clock.icon
                 +i n='clock' cl='ui mini inline image'
@@ -33,17 +34,17 @@ template(name='dao')
                 +i n='marker' cl='ui mini inline image'
                     // |where
                 each location_results
-                    .ui.circular.basic.button #{name}
+                    .ui.circular.basic.compact.small.disabled.button #{name}
                 // .ui.basic.button(title='groups')
                 // i.users.icon
                 +i n='groups' cl='ui mini inline image'
                 // |people
                 each person_results
-                    .ui.basic.circular.button #{name}
+                    .ui.basic.circular.compact.small.disabled.button #{name}
                 // .ui.basic.button
                 +i n='building' cl='ui mini inline image'
                 each organization_results
-                    .ui.circular.button #{name}
+                    .ui.circular.compact.small.disabled.button #{name}
                 // each selected_emotions
                 //     .ui.black.compact.button.unselect_emotion
                 //         |#{this}
@@ -51,29 +52,43 @@ template(name='dao')
                 //     if name
                 //         .ui.compact.button.select_emotion
                 //             |#{name}
-                .ui.large.basic.label(title='results') #{doc_count} results
                 // .spacer
                 // .five.wide.right.aligned.column
                 // .eleven.wide.column
-                +emotion_mode k='joy' i='happy--v1' i2='smile' c=' green'
-                +emotion_mode k='sadness' i='sad--v1' i2='sad tear' c=' blue'
-                +emotion_mode k='anger' i='angry--v1' i2='frown' c=' red'
-                +emotion_mode k='disgust' i='disgusting' i2='grin tongue squint' c=' orange'
-                +emotion_mode k='fear' i='scream' i2='tired' c='black'
-                +view_mode k='twitter' i='twitter' c='blue'
-                +view_mode k='video' i='youtube' c='red'
-                +view_mode k='image' i='picture' c='green'
-                +view_mode k='posts' i='blog' c='teal'
-                +view_mode k='wikipedia' i='wikipedia-logo' c='purple'
-                +view_mode k='stackexchange' i='stack-exchange'
-                +view_mode k='github' i='github'
+                // +emotion_mode k='joy' i='happy--v1' i2='smile' c=' green'
+                // +emotion_mode k='sadness' i='sad--v1' i2='sad tear' c=' blue'
+                // +emotion_mode k='anger' i='angry--v1' i2='frown' c=' red'
+                // +emotion_mode k='disgust' i='disgusting' i2='grin tongue squint' c=' orange'
+                // +emotion_mode k='fear' i='scream' i2='tired' c='black'
+                // +view_mode k='twitter' i='twitter' c='blue'
+                // +view_mode k='video' i='youtube' c='red'
+                // +view_mode k='image' i='picture' c='green'
+                // +view_mode k='posts' i='blog' c='teal'
+                // +view_mode k='wikipedia' i='wikipedia-logo' c='purple'
+                // +view_mode k='stackexchange' i='stack-exchange'
+                // +view_mode k='github' i='github'
+                +skve k='emotion_mode' v='happy' l='happy' i='happy--v1'
+                +skve k='emotion_mode' v='sad' l='sad' i='sad--v1'
+                +skve k='emotion_mode' v='anger' l='anger' i='angry--v1'
+                +skve k='emotion_mode' v='disgust' l='disgust' i='disgusting'
+                +skve k='emotion_mode' v='fear' l='fear' i='scream'
+                +skve k='view_mode' v='posts' l='posts' i='blog'
+                +skve k='view_mode' v='wikipedia' l='wikipedia' i='wikipedia'
+                +skve k='view_mode' v='stackexchange' l='stackexchange' i='stackexchange'
+                +skve k='view_mode' v='image' l='image' i='image'
+                +skve k='view_mode' v='github' l='github' i='github'
+                +skve k='view_mode' v='video' l='youtube' i='youtube'
+                +skve k='view_mode' v='twitter' l='twitter' i='twitter'
+                +skve k='view_mode' v='bitcoin' l='bitcoin' i='bitcoin'
+                +skve k='view_mode' v='covid' l='covid' i='biohazard'
                 // +view_mode k='alpha' i='disabled brain'
                 // +view_mode k='porn' i='mercury'
-                +view_mode k='bitcoin' i='bitcoin'
-                +view_mode k='covid' i='biohazard'
+                // +view_mode k='bitcoin' i='bitcoin'
+                // +view_mode k='covid' i='biohazard'
                     // i.building.icon
                     // |organizations
             .twelve.wide.column
+                +skve k='main_section' v='dashboard' l='dashboard' i='dashboard'
                 +skve k='main_section' v='alpha' l='alpha' i='brain'
                 +skve k='main_section' v='duck' l='search' i='duck'
                 +skve k='main_section' v='reddit' l='reddit' i='reddit'
@@ -84,8 +99,13 @@ template(name='dao')
                 +skve k='main_section' v='events' l='events' i='calendar'
                 +skve k='main_section' v='tasks' l='tasks' i='tasks'
                 +skve k='main_section' v='leaderboard' l='leaderboard' i='leaderboard'
+                +skve k='main_section' v='university' l='university' i='university'
+                +skve k='main_section' v='faq' l='faq' i='faq'
+                +skve k='main_section' v='money' l='money' i='money'
                 .scrolling
-                    if skv_is 'main_section' 'alpha'
+                    if skv_is 'main_section' 'dashboard'
+                        +i n='dashboard'
+                    else if skv_is 'main_section' 'alpha'
                         +alpha
                     else if skv_is 'main_section' 'duck'
                         .ui.inline.header.toggle_duck.pointer
