hide nav, hor cards

--- a/parts/client/client.jade
+++ b/parts/client/client.jade
@@ -49,7 +49,7 @@ template(name='layout')
     // if currentUser
     // .ui.bottom.attached.pushable.segment
     // .invert
-    +nav
+    // +nav
     // #main_area.scrolling.global_container
 
     // .ui.bottom.attached.pushable.segment
