--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -14,7 +14,7 @@ template(name='dao')
                     //         i.remove.icon
                     each selected_tags
                         +unselect_tag
-                .ui.left.icon.input(class=thinking_class)
+                .ui.left.icon.transparent.large.input(class=thinking_class)
                     i.search.grey.icon
                     input.search_title(type='text' autofocus='')
                 each tag_results
@@ -257,8 +257,8 @@ template(name='unselect_tag')
         strong #{this}
 
 template(name='tag_selector')
-    // a.ui.basic.button.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.basic.tertiary.big.button.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.invert.image(src=term.watson.metadata.image)    
