--- a/parts/client/reddit.jade
+++ b/parts/client/reddit.jade
@@ -1,5 +1,5 @@
 template(name="reddit_doc")
-    .ui.horizontal.card(class=card_class)
+    .ui.card(class=card_class)
         if skv_is 'thinking' true
             .ui.placeholder
                 .rectangular.image
