--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -35,24 +35,30 @@ template(name='dao')
                 +i n='marker' cl='ui mini inline image'
                     // |where
                 each location_results
-                    .ui.circular.basic.compact.small.tertiary.button #{name}
+                    .ui.compact.small.tertiary.add_tag.button #{name}
                 // .ui.basic.tertiary.button(title='groups')
                 // i.users.icon
                 +i n='groups' cl='ui mini inline image'
                 // |people
                 each person_results
-                    .ui.basic.circular.compact.small.tertiary.button #{name}
+                    .ui.compact.small.tertiary.add_tag.button #{name}
                 // .ui.basic.tertiary.button
-                +i n='building' cl='ui mini inline image'
+                +i n='building' cl='ui mini inline image' t='company'
+                each company_results
+                    .ui.compact.small.tertiary.add_tag.button #{name}
+                +i n='television' cl='ui mini inline image' t='tv shows'
+                each tvshow_results
+                    .ui.compact.small.tertiary.add_tag.button #{name}
+                +i n='nature' cl='ui mini inline image' t='organization'
                 each organization_results
-                    .ui.circular.compact.small.tertiary.button #{name}
-                // each selected_emotions
-                //     .ui.black.compact.button.unselect_emotion
-                //         |#{this}
-                // each emotion_results
-                //     if name
-                //         .ui.compact.button.select_emotion
-                //             |#{name}
+                    .ui.compact.small.tertiary.add_tag.button #{name}
+                each selected_emotions
+                    .ui.black.compact.button.unselect_emotion
+                        |#{this}
+                each emotion_results
+                    if name
+                        .ui.compact.button.select_emotion
+                            |#{name}
                 // .spacer
                 // .five.wide.right.aligned.column
                 // .eleven.wide.column
@@ -163,11 +169,17 @@ template(name='dao')
                         +skve k='sort_direction' v=-1 l='u' i='up'
                         +skve k='sort_direction' v=1 l='d' i='down'
                         // |view
-                        // +skve k='view_mode' v='cards' l='cards' i='squared-menu' ionly=true
-                        // +skve k='view_mode' v='list' l='list' i='list' ionly=true
-                        .ui.cards
-                            each reddit_docs
-                                +reddit_doc
+                        +skve k='view_mode' v='cards' l='cards' i='squared-menu' ionly=true
+                        +skve k='view_mode' v='list' l='list' i='list' ionly=true
+                        if skv_is 'view_mode' 'list'
+                            .ui.large.list 
+                                each reddit_docs
+                                    .item
+                                        .ui.header #{title}
+                        else 
+                            .ui.cards
+                                each reddit_docs
+                                    +reddit_doc
                         
                     else if skv_is 'main_section' 'search_doc'
                         if search_doc
@@ -259,7 +271,7 @@ template(name='unselect_tag')
 
 template(name='tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.basic.large.zoomer.tertiary.button.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.basic.zoomer.tertiary.button.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.zoomer(src=term.watson.metadata.image)    
