--- a/parts/client/reddit.jade
+++ b/parts/client/reddit.jade
@@ -79,28 +79,28 @@ template(name="reddit_doc")
                     // pre
                     // .nl2br
                     // if viewing
-                    
-                    +call_watson
-                    if watson    
-                        unless tone
-                            +call_tone    
-                    if parsed_selftext_html
-                        .ui.segment
-                            |!{parsed_selftext_html}
-                    else if selftext
-                        .ui.segment
-                            |{{nl2br selftext}}
-                    else if body
-                        div
-                        .ui.segment
-                            |{{nl2br body}}
-                    // else if tone
-                    //     .spacer
-                    //     +tone
-                    // div(style='position:relative; padding-bottom:calc(125.00% + 44px)')
-                    //     iframe(src='https://gfycat.com/ifr/MeanFatAmurratsnake' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen)
-                    // |{{selftext}}
-                    // +convert
+                    .spacer
+                    +skve k='doc_section' v='main' l='main' i='content'
+                    if skv_is 'doc_section' 'main'
+                        +call_watson
+                        if watson    
+                            unless tone
+                                +call_tone    
+                        if parsed_selftext_html
+                            .ui.segment
+                                |!{parsed_selftext_html}
+                        else if selftext
+                            .ui.segment
+                                |{{nl2br selftext}}
+                        else if body
+                            div
+                            .ui.segment
+                                |{{nl2br body}}
+                        // div(style='position:relative; padding-bottom:calc(125.00% + 44px)')
+                        //     iframe(src='https://gfycat.com/ifr/MeanFatAmurratsnake' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen)
+                        // |{{selftext}}
+                        // +convert
+                    .spacer
                     a.ui.icon.big.basic.button(href=url target='_window' title=domain)
                         i.external.icon
                         |view site 
@@ -110,7 +110,9 @@ template(name="reddit_doc")
                     // .spacer
                     // div
                     if tone
-                        +tone
+                        +skve k='doc_section' v='money' l='money' i='money'
+                        if skv_is 'doc_section'
+                            +tone
                     each tags
                         +doc_tag
                     // |#{tags.length}
