successful graduation of iron router

--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -46,7 +46,7 @@ template(name='dao')
                 +i n='building' cl='ui mini inline image' t='company'
                 each company_results
                     .ui.compact.small.tertiary.add_tag.button #{name}
-                +i n='television' cl='ui mini inline image' t='tv shows'
+                // +i n='television' cl='ui mini inline image' t='tv shows'
                 each tvshow_results
                     .ui.compact.small.tertiary.add_tag.button #{name}
                 +i n='nature' cl='ui mini inline image' t='organization'
