add some transfter to upper case, remove user accounts with methods

--- a/parts/client/alpha.jade
+++ b/parts/client/alpha.jade
@@ -1,8 +1,8 @@
 template(name='alpha')
-    a.ui.header.toggle_alpha.pointer
+    +i n='brain'
+        // a.ui.header.toggle_alpha.pointer
         // i.large.brain.icon
-        +i n='brain'
-        | wolfram alpha
+        // | wolfram alpha
     // unless viewing_alpha
     each alphas
         with response.queryresult
