--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -86,8 +86,8 @@ template(name='dao')
                 +skve k='view_mode' v='github' l='github' i='github'
                 +skve k='view_mode' v='video' l='youtube' i='youtube'
                 +skve k='view_mode' v='twitter' l='twitter' i='twitter'
-                +skve k='view_mode' v='bitcoin' l='bitcoin' i='bitcoin'
-                +skve k='view_mode' v='covid' l='covid' i='biohazard'
+                // +skve k='view_mode' v='bitcoin' l='bitcoin' i='bitcoin'
+                // +skve k='view_mode' v='covid' l='covid' i='biohazard'
                 // +view_mode k='alpha' i='disabled brain'
                 // +view_mode k='porn' i='mercury'
                 // +view_mode k='bitcoin' i='bitcoin'
@@ -101,14 +101,14 @@ template(name='dao')
                 +skve k='main_section' v='reddit' l='reddit' i='reddit'
                 +skve k='main_section' v='wikipedia' l='wikipedia' i='wikipedia'
                 +skve k='main_section' v='shop' l='shop' i='shop'
-                +skve k='main_section' v='chat' l='chat' i='chat'
-                +skve k='main_section' v='groups' l='groups' i='groups'
-                +skve k='main_section' v='events' l='events' i='calendar'
-                +skve k='main_section' v='tasks' l='tasks' i='tasks'
-                +skve k='main_section' v='leaderboard' l='leaderboard' i='leaderboard'
-                +skve k='main_section' v='university' l='university' i='university'
-                +skve k='main_section' v='faq' l='faq' i='faq'
-                +skve k='main_section' v='money' l='money' i='money'
+                // +skve k='main_section' v='chat' l='chat' i='chat'
+                // +skve k='main_section' v='groups' l='groups' i='groups'
+                // +skve k='main_section' v='events' l='events' i='calendar'
+                // +skve k='main_section' v='tasks' l='tasks' i='tasks'
+                // +skve k='main_section' v='leaderboard' l='leaderboard' i='leaderboard'
+                // +skve k='main_section' v='university' l='university' i='university'
+                // +skve k='main_section' v='faq' l='faq' i='faq'
+                // +skve k='main_section' v='money' l='money' i='money'
                 .scrollin
                     if skv_is 'main_section' 'dashboard'
                         +i n='dashboard'
@@ -288,7 +288,7 @@ template(name='select_subreddit')
         small #{count}
 
 template(name='doc_tag')
-    a.ui.image.large.label.pointer.zoomer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.image.big.basic.label.pointer.zoomer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             img.ui.avatar.compact.image(src=term.watson.metadata.image)    
         | #{this}
