--- a/parts/client/reddit.jade
+++ b/parts/client/reddit.jade
@@ -57,7 +57,9 @@ template(name="reddit_doc")
                         div
                         // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
                         iframe(width="100%" height="600" src=url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-                    else
+                    // else
+                    +skve k='doc_section' v='preview' l='preview' i='content'
+                    if skv_is 'doc_section' 'preview'
                         iframe(width="100%" height="500" src=url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
                     // .medscroll
                     // 
@@ -65,10 +67,10 @@ template(name="reddit_doc")
                     // .ui.big.label 
                     //     i.user.outline.icon
                     //     |#{author}
-                    .ui.label
+                    .ui.big.label
                         i.thumbs.up.outline.icon
                         |#{ups}
-                    a.ui.inline.header(href=url target='_window')
+                    a.ui.small.header(href=url target='_window')
                         | #{url}
                     // .ui.label
                     //     | #{domain}
